--- a/.github/workflows/run_test_cases.yaml
+++ b/.github/workflows/run_test_cases.yaml
@@ -13,6 +13,9 @@ jobs:
 
         steps:
         - uses: actions/checkout@v2
+        - name: fetch all history for all tags and branches
+          run: |
+            git fetch --prune --unshallow
         - name: Install docker-compose
           run: | 
             sudo curl -L "https://github.com/docker/compose/releases/download/1.25.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
