--- a/deploy/charts/emqx/values.yaml
+++ b/deploy/charts/emqx/values.yaml
@@ -39,6 +39,29 @@ emqxConfig:
   ## if EMQX_CLUSTER__K8S__ADDRESS_TYPE eq dns
   # EMQX_CLUSTER__K8S__SUFFIX: "pod.cluster.local"
 
+## --------------------------------------------------------------------
+##  [ACL](https://docs.emqx.io/broker/latest/en/advanced/acl-file.html)
+
+##  -type(who() :: all | binary() |
+##                 {ipaddr, esockd_access:cidr()} |
+##                 {client, binary()} |
+##                 {user, binary()}).
+
+##  -type(access() :: subscribe | publish | pubsub).
+
+##  -type(topic() :: binary()).
+
+##  -type(rule() :: {allow, all} |
+##                  {allow, who(), access(), list(topic())} |
+##                  {deny, all} |
+##                  {deny, who(), access(), list(topic())}).
+## --------------------------------------------------------------------
+emqxAclConfig: >
+  {allow, {user, "dashboard"}, subscribe, ["$SYS/#"]}.
+  {allow, {ipaddr, "127.0.0.1"}, pubsub, ["$SYS/#", "#"]}.
+  {deny, all, subscribe, ["$SYS/#", {eq, "#"}]}.
+  {allow, all}.
+
 ## EMQX Enterprise Edition requires manual creation of a Secret containing the licensed content. Write the name of Secret to the value of "emqxLicneseSecretName"
 ## Example:
 ##   kubectl create secret generic emqx-license-secret-name --from-file=/path/to/emqx.lic
