--- a/rebar.config
+++ b/rebar.config
@@ -15,6 +15,7 @@
   emqx_auth_http,
   emqx_auth_jwt,
   emqx_auth_mysql,
+  emqx_extension_hook,
   emqx_web_hook,
   emqx_recon,
   emqx_rule_engine
@@ -78,6 +79,7 @@
     {emqx_auth_http, load},
     {emqx_auth_mysql, load},
     {emqx_auth_jwt, load},
+    {emqx_extension_hook, load},
     {emqx_web_hook, load},
     {emqx_recon, load},
     {emqx_rule_engine, load}
@@ -100,6 +102,7 @@
     {template,"{{output_dir}}/../../conf/plugins/emqx_bridge_mqtt.conf", "etc/plugins/emqx_bridge_mqtt.conf"},
     {template,"{{output_dir}}/../../conf/plugins/emqx_coap.conf", "etc/plugins/emqx_coap.conf"},
     {template,"{{output_dir}}/../../conf/plugins/emqx_auth_http.conf", "etc/plugins/emqx_auth_http.conf"},
+    {template,"{{output_dir}}/../../conf/plugins/emqx_extension_hook.conf", "etc/plugins/emqx_extension_hook.conf"},
     {template, "data/loaded_plugins.tmpl", "data/loaded_plugins"},
     {copy,"{{output_dir}}/../../conf/acl.conf","etc/acl.conf"},
     {copy,"bin/nodetool","bin/nodetool"},
