Add loaded_modules.tmpl file

--- a/rebar.config
+++ b/rebar.config
@@ -93,6 +93,7 @@
     {template,"{{output_dir}}/../../conf/plugins/emqx_coap.conf", "etc/plugins/emqx_coap.conf"},
     {template,"{{output_dir}}/../../conf/plugins/emqx_auth_http.conf", "etc/plugins/emqx_auth_http.conf"},
     {template, "data/loaded_plugins.tmpl", "data/loaded_plugins"},
+    {template, "data/loaded_modules.tmpl", "data/loaded_modules"},
     {copy,"{{output_dir}}/../../conf/acl.conf","etc/acl.conf"},
     {copy,"bin/nodetool","bin/nodetool"},
     {copy,"{{output_dir}}/../../conf/schema","releases/{{rel_vsn}}/"},
