Add emqx_sasl dependency

--- a/rebar.config
+++ b/rebar.config
@@ -18,7 +18,8 @@
   emqx_extension_hook,
   emqx_web_hook,
   emqx_recon,
-  emqx_rule_engine
+  emqx_rule_engine,
+  emqx_sasl
  ]}.
 
 %% Added to deps list for 'cloud' profile
@@ -74,7 +75,8 @@
     {emqx_extension_hook, load},
     {emqx_web_hook, load},
     {emqx_recon, load},
-    {emqx_rule_engine, load}
+    {emqx_rule_engine, load},
+    {emqx_sasl, load}
    ]},
   {overlay,
    [{mkdir,"etc/"},
