--- a/rebar.config
+++ b/rebar.config
@@ -15,6 +15,7 @@
   emqx_auth_http,
   emqx_auth_jwt,
   emqx_auth_mysql,
+  emqx_auth_mnesia,
   emqx_extension_hook,
   emqx_web_hook,
   emqx_recon,
