--- a/rebar.config
+++ b/rebar.config
@@ -72,6 +72,7 @@
     {emqx_auth_http, load},
     {emqx_auth_mysql, load},
     {emqx_auth_jwt, load},
+    {emqx_auth_mnesia, load},
     {emqx_extension_hook, load},
     {emqx_web_hook, load},
     {emqx_recon, load},
