--- a/.github/workflows/run_all_test_cases.yaml
+++ b/.github/workflows/run_all_test_cases.yaml
@@ -18,6 +18,10 @@ jobs:
           run: | 
             sudo curl -L "https://github.com/docker/compose/releases/download/1.25.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
             sudo chmod +x /usr/local/bin/docker-compose
+        - name: Setup docker
+          run: |
+            echo '{ "experimental": true, "storage-driver": "overlay2", "max-concurrent-downloads": 50, "max-concurrent-uploads": 50, "graph": "/mnt/docker" }' | sudo tee /etc/docker/daemon.json
+            sudo systemctl restart docker
         - uses: actions/checkout@v2
           with:
             repository: emqx/emqx-integration-test
