--- a/rebar.config
+++ b/rebar.config
@@ -16,7 +16,6 @@
   emqx_auth_jwt,
   emqx_auth_mysql,
   emqx_auth_mnesia,
-  emqx_extension_hook,
   emqx_web_hook,
   emqx_recon,
   emqx_rule_engine,
@@ -34,6 +33,7 @@
   emqx_statsd,
   emqx_reloader,
   emqx_psk_file,
+  emqx_extension_hook,
   emqx_plugin_template
  ]}.
 
@@ -74,7 +74,6 @@
     {emqx_auth_mysql, load},
     {emqx_auth_jwt, load},
     {emqx_auth_mnesia, load},
-    {emqx_extension_hook, load},
     {emqx_web_hook, load},
     {emqx_recon, load},
     {emqx_rule_engine, load},
@@ -98,12 +97,11 @@
     {template,"{{output_dir}}/../../conf/plugins/emqx_bridge_mqtt.conf", "etc/plugins/emqx_bridge_mqtt.conf"},
     {template,"{{output_dir}}/../../conf/plugins/emqx_coap.conf", "etc/plugins/emqx_coap.conf"},
     {template,"{{output_dir}}/../../conf/plugins/emqx_auth_http.conf", "etc/plugins/emqx_auth_http.conf"},
-    {template,"{{output_dir}}/../../conf/plugins/emqx_extension_hook.conf", "etc/plugins/emqx_extension_hook.conf"},
     {template, "data/loaded_plugins.tmpl", "data/loaded_plugins"},
     {template, "data/loaded_modules.tmpl", "data/loaded_modules"},
     {copy,"{{output_dir}}/../../conf/acl.conf","etc/acl.conf"},
     {copy,"bin/nodetool","bin/nodetool"},
-    {copy,"{{output_dir}}/../../conf/schema","releases/{{rel_vsn}}/"},
+    {copy,"{{output_dir}}/../../conf/schema/emqx.schema","releases/{{rel_vsn}}/"},
     {copy,"bin/install_upgrade_escript", "bin/install_upgrade_escript"},
     {template,"{{output_dir}}/../../lib/emqx/etc/{{vm_args_file}}","etc/vm.args"},
     {copy, "{{output_dir}}/../../lib/emqx/etc/certs","etc/"},
@@ -122,6 +120,7 @@
   {emqx_auth_redis, load},
   {emqx_auth_mongo, load},
   {emqx_lua_hook, load},
+  {emqx_extension_hook, load},
   {emqx_statsd, load},
   {emqx_reloader, load},
   {emqx_psk_file, load},
@@ -134,6 +133,7 @@
 {cloud_relx_overlay,
  [{template,"{{output_dir}}/../../conf/plugins/emqx_lwm2m.conf", "etc/plugins/emqx_lwm2m.conf"},
   {template,"{{output_dir}}/../../conf/plugins/emqx_psk_file.conf", "etc/plugins/emqx_psk_file.conf"},
+  {template,"{{output_dir}}/../../conf/plugins/emqx_extension_hook.conf", "etc/plugins/emqx_extension_hook.conf"},
   {copy,"{{output_dir}}/../../lib/emqx_lwm2m/lwm2m_xml","etc/"},
   {copy, "{{output_dir}}/../../lib/emqx_psk_file/etc/psk.txt", "etc/psk.txt"}
  ]}.
