--- a/.ci/emqx-erlang/Dockerfile
+++ b/.ci/emqx-erlang/Dockerfile
@@ -1,3 +1,3 @@
-FROM erlang:22.1
+FROM erlang:22.3
 
-RUN apt update && apt install -y vim openssl g++ libstdc++
+RUN apt update && apt install -y vim openjdk-8-jdk
