--- a/.github/workflows/run_test_cases.yaml
+++ b/.github/workflows/run_test_cases.yaml
@@ -58,4 +58,4 @@ jobs:
           if: always()
           with:
             name: logs
-            path: _build/emqx+test/logs
+            path: tests/logs
