--- a/.github/workflows/build_packages.yaml
+++ b/.github/workflows/build_packages.yaml
@@ -144,12 +144,13 @@ jobs:
     - uses: actions/checkout@v2
       with: 
         path: emqx-rel
-    - name: fetch all history for all tags and branches
-      run: |
-        cd emqx-rel
-        git remote set-branches origin "*"
-        git pull --unshallow
-    - uses: actions/checkout@v2
+        fetch-depth: 0
+    # - name: fetch all history for all tags and branches
+    #   run: |
+    #     cd emqx-rel
+    #     git remote set-branches origin "*"
+    #     git pull --unshallow
+    # - uses: actions/checkout@v2
       with:
         repository: emqx/emqx-integration-test
         token: ${{ secrets.AccessToken }}
