--- a/.github/workflows/build_packages.yaml
+++ b/.github/workflows/build_packages.yaml
@@ -150,7 +150,7 @@ jobs:
     #     cd emqx-rel
     #     git remote set-branches origin "*"
     #     git pull --unshallow
-    # - uses: actions/checkout@v2
+    - uses: actions/checkout@v2
       with:
         repository: emqx/emqx-integration-test
         token: ${{ secrets.AccessToken }}
