--- a/.github/workflows/build_packages.yaml
+++ b/.github/workflows/build_packages.yaml
@@ -24,6 +24,7 @@ jobs:
         set-executionpolicy remotesigned -s cu
         iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
         scoop bucket add extras https://github.com/lukesampson/scoop-extras.git
+        scoop bucket add java
         scoop install sudo curl 7zip aws erlang openjdk vcredist2013
         $env:path + ";" + $env:USERPROFILE + "\scoop\shims"
         make deps-emqx
