Rm plugin schema

--- a/rebar.config
+++ b/rebar.config
@@ -16,7 +16,6 @@
   emqx_auth_jwt,
   emqx_auth_mysql,
   emqx_auth_mnesia,
-  emqx_extension_hook,
   emqx_web_hook,
   emqx_recon,
   emqx_rule_engine,
@@ -34,6 +33,7 @@
   emqx_statsd,
   emqx_reloader,
   emqx_psk_file,
+  emqx_extension_hook,
   emqx_plugin_template
  ]}.
 
@@ -103,7 +103,7 @@
     {template, "data/loaded_modules.tmpl", "data/loaded_modules"},
     {copy,"{{output_dir}}/../../conf/acl.conf","etc/acl.conf"},
     {copy,"bin/nodetool","bin/nodetool"},
-    {copy,"{{output_dir}}/../../conf/schema","releases/{{rel_vsn}}/"},
+    {copy,"{{output_dir}}/../../conf/schema/emqx.schema","releases/{{rel_vsn}}/"},
     {copy,"bin/install_upgrade_escript", "bin/install_upgrade_escript"},
     {template,"{{output_dir}}/../../lib/emqx/etc/{{vm_args_file}}","etc/vm.args"},
     {copy, "{{output_dir}}/../../lib/emqx/etc/certs","etc/"},
