--- a/.github/workflows/build_packages.yaml
+++ b/.github/workflows/build_packages.yaml
@@ -84,19 +84,19 @@ jobs:
     strategy:
       matrix:
         os: 
-          - ubuntu18.04
-          - ubuntu16.04
-          - ubuntu14.04
-          - debian10
-          - debian9 
-          - debian8 
-          - opensuse
-          # - centos8
-          - centos7 
-          # - centos6
-          - raspbian10
-          - raspbian9
-          - raspbian8
+          - ubuntu18.04-1
+          - ubuntu16.04-1
+          - ubuntu14.04-1
+          - debian10-1
+          - debian9-1
+          - debian8-1
+          - opensuse-1
+          # - centos8-1
+          - centos7-1
+          - centos6-1
+          - raspbian10-1
+          - raspbian9-1
+          - raspbian8-1
   
     steps:
     - uses: actions/checkout@v1
