--- a/.github/workflows/build_packages.yaml
+++ b/.github/workflows/build_packages.yaml
@@ -84,19 +84,19 @@ jobs:
     strategy:
       matrix:
         os: 
-          - ubuntu18.04-1
-          - ubuntu16.04-1
-          - ubuntu14.04-1
-          - debian10-1
-          - debian9-1
-          - debian8-1
-          - opensuse-1
-          # - centos8-1
-          - centos7-1
-          - centos6-1
-          - raspbian10-1
-          - raspbian9-1
-          - raspbian8-1
+          - ubuntu18.04
+          - ubuntu16.04
+          - ubuntu14.04
+          - debian10
+          - debian9
+          - debian8
+          - opensuse
+          # - centos8
+          - centos7
+          - centos6
+          - raspbian10
+          - raspbian9
+          - raspbian8
   
     steps:
     - uses: actions/checkout@v1
@@ -116,7 +116,7 @@ jobs:
         if [ ${{ github.event_name}} == 'repository_dispatch' ]; then version=${{ github.event.client_payload.version }}; else version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g"); fi
         tag=$(git describe --tags $(git rev-list --tags --max-count=1))
         sudo docker run --rm --privileged multiarch/qemu-user-static:register --reset
-        sudo docker run -i --name $SYSTEM-build -e EMQX_DEPS_DEFAULT_VSN=$tag -e SYSTEM=$SYSTEM -v $(pwd):/emqx-rel emqx/build-env:$ERL_OTP-$SYSTEM sh -c "cd /emqx-rel/.github/workflows/script; if [ -z $(echo $SYSTEM | grep -o raspbian) ];then EMQX_NAME=emqx ./build.sh; fi; EMQX_NAME=emqx-edge ./build.sh"
+        sudo docker run -i --name $SYSTEM-build -e EMQX_DEPS_DEFAULT_VSN=$tag -e SYSTEM=$SYSTEM -v $(pwd):/emqx-rel emqx/build-env:$ERL_OTP-$SYSTEM-1 sh -c "cd /emqx-rel/.github/workflows/script; if [ -z $(echo $SYSTEM | grep -o raspbian) ];then EMQX_NAME=emqx ./build.sh; fi; EMQX_NAME=emqx-edge ./build.sh"
         cd _packages/emqx && for var in $(ls emqx-$SYSTEM-* ); do sudo bash -c "echo $(sha256sum $var | awk '{print $1}') > $var.sha256"; done && cd -
         cd _packages/emqx-edge/&& for var in $(ls emqx-edge-$SYSTEM-* ); do sudo bash -c "echo $(sha256sum $var | awk '{print $1}') > $var.sha256"; done && cd -
         [ -d _packages/emqx ] && aws s3 cp --recursive ./_packages/emqx  s3://packages.emqx.io/emqx-ce/$version
